feat: updated RouletteBet class
CHANGE: set generic type for choices